# vibeanvil

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build_log.md  check_output.txt  clippy.txt  errors.txt  install.ps1  install.sh  release-please-config.json  temp_workflow.yml  uninstall.ps1  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  create-release.yml  dependabot-auto-merge.yml  release-please.yml  release.yml
brainpacks/: presets.yaml
brainpacks/core/: core.jsonl
docs/: DATA_LAYOUT.md  DATA_SOURCES.md  HARVEST_PRESETS.md  PROVIDERS.md  README.md  SECURITY.md  START_HERE.md  USAGE.md  brainpack.md  commands.md  data-layout.md  data-sources.md  faq.md  getting-started.md  guardrails.md  harvest-presets.md  mcp.md  prompt-system-roadmap.md  provider-matrix.md  providers.md  rules-memory-architecture.md  templates.md  vibe-coding.md  workflow.md
docs/guide/: installation.md
src/: main.rs  workspace.rs
src/audit/: mod.rs
src/brain/: core_jsonl_tests.rs  export_tests.rs  harvester.rs  map.rs  mod.rs  pack.rs  presets.rs  storage.rs
src/cli/: analyze.rs  blueprint.rs  brain.rs  build.rs  clarify.rs  constitution.rs  contract.rs  doctor.rs  harvest.rs  implement.rs  init.rs  intake.rs  log.rs  mcp.rs  mod.rs  mode.rs  plan.rs  progress.rs  prompt.rs  providers.rs  repomap.rs  review.rs  run.rs  ship.rs  snapshot.rs  status.rs  style.rs  tasks.rs  ui.rs  undo.rs  update.rs  watch.rs  wizard.rs
src/contract/: mod.rs  refinement.rs  schema.rs  templates.rs
src/evidence/: mod.rs
src/guardrails/: capsule.rs  classifier.rs  gate.rs  mod.rs
src/mcp/: http_transport.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs
src/prompt/: mod.rs
src/prompt/templates/: architect.md  commit.md  debug.md  developer.md  install-vibeanvil.md  migrate.md  plan.md  qa.md  refactor.md  review.md  security.md  vision.md  xray.md
src/provider/: aider.rs  capability.rs  claude_code.rs  cline.rs  cody.rs  command.rs  continue_dev.rs  copilot.rs  cursor.rs  gemini.rs  goose.rs  human.rs  jetbrains.rs  kiro.rs  mod.rs  ollama.rs  opencode.rs  patch.rs  safety.rs  selector.rs  supermaven.rs  tabby.rs  trae.rs  windsurf.rs  zed.rs
src/security/: mod.rs  secrets.rs
src/state/: mod.rs
test-user-flow/: main.rs
test-user-flow/.vibeanvil/: .gitignore  intake.md  plan.md  state.json
test-user-flow/.vibeanvil/blueprints/: blueprint.md
test-user-flow/.vibeanvil/contracts/: contract.json
tests/: integration_tests.rs
vibecode-kit/: README.md
vibecode-kit/docs/: PHILOSOPHY.md
vibecode-kit/prompts/: DEBUG-MASTER.md  INTEGRATION-MASTER.md  PERFORMANCE-MASTER.md  QA-MASTER.md  SECURITY-MASTER.md  VIBECODE-MASTER.md  XRAY-MASTER.md
vibecode-kit/templates/: E-COMMERCE.md
